# dpp4nlp

./: .gitignore  README.md  pyproject.toml  requirements.mac.txt
dpp/: dpp_algorithm.py  exploration.ipynb  utils.py
dpp4nlp/: dpp4nlp.py
research/: 20240319_dpp.py  20240319_encode_ds.py  20240319_encoding_text.py  20240319_explore_dataset.py  20240319_exploring_dataset.py  20240319_whole_pipeline.py  20240321_dpp4nlp.py  20241019_explore_ds.py  start.py
text_encoder/: models.py
text_encoder/roberta/: model.py
